# arxiv-sanity-x

./: .env.example  .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  arxiv_daemon.py  batch_paper_summarizer.py  cleanup_locks.py  compute.py  daemon.py  embedding_serve.sh  generate_latest_summaries.py  litellm.sh  llm_template.yml  mineru_serve.sh  package-lock.json  package.json  paper_summarizer.py  pyproject.toml  requirements.txt  run_services.py  send_emails.py  serve.py  summary_utils.py  tasks.py  thumb_daemon.py  up.sh  vars_template.py  vllm_serve.sh
.github/workflows/: check-dist.yml  ci.yml
.skills/: claude-cli.md
aslite/: __init__.py  arxiv.py  db.py  repositories.py
backend/: __init__.py  app.py  core.py  legacy.py
backend/blueprints/: __init__.py  api_papers.py  api_readinglist.py  api_search.py  api_sse.py  api_summary.py  api_tags.py  api_uploads.py  api_user.py  metrics.py  web.py
backend/schemas/: __init__.py  readinglist.py  summary.py  tags.py  uploads.py
backend/services/: __init__.py  (+14 more)
config/: __init__.py  cli.py  sentry.py  settings.py  settings.pyi
data-repo/: .gitignore  README.md
docs/: CONFIGURATION.md  DEVELOPMENT.md  INDEX.md  OPEN_SOURCE.md  OPERATIONS.md  SECURITY.md
scripts/: __init__.py  __main__.py  build.js  check-dist-sync.sh  cleanup_locks.py  cleanup_tasks.py  migrate_neg_tags.py  sync_to_opensource.sh
static/: author_utils.js  common_utils.js  markdown_core_utils.js  markdown_renderer_utils.js  markdown_sanitizer_utils.js  markdown_summary_dom_utils.js  markdown_summary_utils.js  paper_detail.js  paper_list.js  paper_summary.js  readinglist.js  style.css  tag_dropdown_shared.js  tldr_utils.js  word_list.js
templates/: about.html  base.html  error.html  index.html  inspect.html  profile.html  readinglist.html  stats.html  summary.html
tests/: README.md  __init__.py  conftest.py  daemon_simulate.py  service_detection.py  validate_summary_flow.py
tools/: __init__.py  __main__.py  arxiv_daemon.py  batch_paper_summarizer.py  cleanup_summary_model_cache.py  compute.py  daemon.py  paper_summarizer.py  rebuild_time_index.py  send_emails.py
(+154 files in other folders)
